Fix Q_ASSERT crash in QFFmpegMediaPlayer::setMediaAsync()

If QMediaPlayer::setSource() was called with an empty URL while media
was still being loaded asynchronously from the previous call to
setSource(), mediaStatus() returned NoMedia when the asynchronous
function returned, triggering the Q_ASSERT in debug builds.

With this change the cancelToken will be checked first, causing
the function to return before the Q_ASSERT.

Also added a test that confirms that the Q_ASSERT is not triggered
in the above scenario and that the cancelToken system is working.

Fixes: QTBUG-128159
Change-Id: Ic0bef26ffc7b0f37302b5e337800de08dc38f3db
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
(cherry picked from commit ddf0c17aaf827649f0f0b562173e02a00d77b153)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 3dbe26f5c498e22a49b741036c71d1f2dc1dcc41)
(cherry picked from commit ee52d13c3cbe500b6f73fa58a2effe6542349f94)
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>